hot fix contact page

--- a/index.html
+++ b/index.html
@@ -1,106 +1,95 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Cat Portfolio</title>
-        <link rel="stylesheet" href="styles.css" />
-    </head>
-    <body>
-        <nav>
-            <div class="logo">
-                <img
-                    src="./images/catImage.jpg"
-                    alt="Cat Image"
-                    height="50"
-                    width="50"
-                />
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Cat Portfolio</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <nav>
+      <div class="logo">
+        <img
+          src="./images/catImage.jpg"
+          alt="Cat Image"
+          height="50"
+          width="50"
+        />
+      </div>
+      <ul>
+        <li><a href="mailto:cat@shareef.com">Contact</a></li>
+      </ul>
+    </nav>
+    <main>
+      <!-- Hero Section -->
+      <section class="hero-section">
+        <div class="cat-intro">
+          <h1>Welcome to my portfolio! 🐾</h1>
+          <p>
+            Hello😺 Students, I am miss Cat. I am here to help you learn HTML
+            and CSS by building my portfolio. Pay attention to the CSS🙀 and
+            HTML😹 code in the code editor.
+          </p>
+          <div class="hero-btn">
+            <button class="quotes-btn">
+              <a href="./index.html#quotes-id">Quotes</a>
+            </button>
+            <button class="about-btn">About</button>
+          </div>
+        </div>
+        <div>
+          <img src="./images/teacherCat.jpg" alt="Cat Image" class="cat-img" />
+        </div>
+      </section>
+
+      <!-- Introduction -->
+      <section class="intro-section">
+        <h2>Introduction</h2>
+        <div>
+          <img
+            src="./images/catIntro.jpg"
+            alt="Cat Introduction"
+            height="250"
+            width="350"
+          />
+          <p>
+            This one named Cat, I like to eat fish🐟 and I like to observe my
+            master coding, teaching maths and giving boring lectures💤💤💤.
+          </p>
+        </div>
+      </section>
+
+      <!-- Quotes Section -->
+      <section class="quotes-section" id="quotes-id">
+        <h2>Quotes by Cat</h2>
+        <div class="quotes-container">
+          <div class="quotes">
+            <div id="quote-1">If you wanna be happy, eat fish🐟</div>
+            <div id="quote-2">Unable to solve problems? Sleep😪😴...</div>
+            <div id="quote-3">
+              Stare at your master, he will pet you eventually😎😻
             </div>
-            <ul>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-        <main>
-            <!-- Hero Section -->
-            <section class="hero-section">
-                <div class="cat-intro">
-                    <h1>Welcome to my portfolio! 🐾</h1>
-                    <p>
-                        Hello😺 Students, I am miss Cat. I am here to help you
-                        learn HTML and CSS by building my portfolio. Pay
-                        attention to the CSS🙀 and HTML😹 code in the code
-                        editor.
-                    </p>
-                    <div class="hero-btn">
-                        <button class="quotes-btn">
-                            <a href="./index.html#quotes-id">Quotes</a>
-                        </button>
-                        <button class="about-btn">About</button>
-                    </div>
-                </div>
-                <div>
-                    <img
-                        src="./images/teacherCat.jpg"
-                        alt="Cat Image"
-                        class="cat-img"
-                    />
-                </div>
-            </section>
-
-            <!-- Introduction -->
-            <section class="intro-section">
-                <h2>Introduction</h2>
-                <div>
-                    <img
-                        src="./images/catIntro.jpg"
-                        alt="Cat Introduction"
-                        height="250"
-                        width="350"
-                    />
-                    <p>
-                        This one named Cat, I like to eat fish🐟 and I like to
-                        observe my master coding, teaching maths and giving
-                        boring lectures💤💤💤.
-                    </p>
-                </div>
-            </section>
-
-            <!-- Quotes Section -->
-            <section class="quotes-section" id="quotes-id">
-                <h2>Quotes by Cat</h2>
-                <div class="quotes-container">
-                    <div class="quotes">
-                        <div id="quote-1">
-                            If you wanna be happy, eat fish🐟
-                        </div>
-                        <div id="quote-2">
-                            Unable to solve problems? Sleep😪😴...
-                        </div>
-                        <div id="quote-3">
-                            Stare at your master, he will pet you eventually😎😻
-                        </div>
-                        <div id="quote-4">
-                            What's the most horrible thing? Someone typing after
-                            you say "Bye". 😐🤐
-                        </div>
-                        <div id="quote-5">
-                            Broke something? Just make puppy face, It always
-                            works!🤩🤐
-                        </div>
-                    </div>
-                    <a href="#quote-1">1</a>
-                    <a href="#quote-2">2</a>
-                    <a href="#quote-3">3</a>
-                    <a href="#quote-4">4</a>
-                    <a href="#quote-5">5</a>
-                </div>
-            </section>
-        </main>
-        <footer id="footer">
-            <h2>If you love fish🐟 and sleep😴, as much as I do</h2>
-            <a href="mailto:cat@shareef.com">Contact Cat</a>
-            <div><p>Created with love by Nadeem Shareef 2021</p></div>
-        </footer>
-    </body>
+            <div id="quote-4">
+              What's the most horrible thing? Someone typing after you say
+              "Bye". 😐🤐
+            </div>
+            <div id="quote-5">
+              Broke something? Just make puppy face, It always works!🤩🤐
+            </div>
+          </div>
+          <a href="#quote-1">1</a>
+          <a href="#quote-2">2</a>
+          <a href="#quote-3">3</a>
+          <a href="#quote-4">4</a>
+          <a href="#quote-5">5</a>
+        </div>
+      </section>
+    </main>
+    <footer id="footer">
+      <h2>If you love fish🐟 and sleep😴, as much as I do</h2>
+      <a href="mailto:cat@shareef.com">Contact Cat</a>
+      <div><p>Created with love by Nadeem Shareef 2021</p></div>
+    </footer>
+  </body>
 </html>
