hot fix about btn

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <button class="quotes-btn">
               <a href="./index.html#quotes-id">Quotes</a>
             </button>
-            <button class="about-btn">About</button>
+            <button class="about-btn"><a href="#intro"> About</a></button>
           </div>
         </div>
         <div>
@@ -44,7 +44,7 @@
       </section>
 
       <!-- Introduction -->
-      <section class="intro-section">
+      <section id="intro" class="intro-section">
         <h2>Introduction</h2>
         <div>
           <img
