--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
   <body>
     <nav>
       <div class="logo">
-        <img
-          src="./images/catImage.jpg"
-          alt="Cat Image"
-          height="50"
-          width="50"
-        />
+        <a href="./index.html">
+          <img
+            src="./images/catImage.jpg"
+            alt="Cat Image"
+            height="50"
+            width="50"
+          />
+        </a>
       </div>
       <ul>
         <li><a href="mailto:cat@shareef.com">Contact</a></li>
